# fake-drummer

./: .gitignore  CMakeLists.txt  Kontakt Portable x64.mid  README.md  local-build.cmd  open high-hats.mid
.github/workflows/: build-mingw.yml
src/: main.cpp
